<resources>
    <string name="app_name"> Data Entry App</string>
    <string name="input_fields"><u> Input Fields  </u></string>
    <string name="pass"> Password </string>
    <string name="title"> Member Login </string>
    <string name="login">Login</string>
    <string name="register_here"> <u> Register Here </u></string>
    <string name="name"> Name </string>
    <string name="done"> Done </string>
    <string name="password1"> Enter Password </string>
    <string name="password2"> Re-type Password </string>
    <string name="users">USERS</string>
    <string name="date">  Date </string>
    <string name="tagline1"> Welcome BACK </string>
    <string name="tagline2"> Sign in to continue access </string>
    <string name="register_tagline"> Lets get you on Board !</string>
    <string name="register"> Register </string>
    <string name="shop">  Shop Name </string>
    <string name="credit">  Credit Amount </string>
    <string name="back"> Back </string>
    <string name="sign_in">Log In</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_date">Enter Date</string>
    <string name="save"> Save </string>
    <string name="enter_bill">Enter Bill No</string>
    <string name="enter_shop">Enter Shop Name</string>
    <string name="enter_amount">Enter Credit Amount</string>
    <string name="bill">Bill No</string>
    <string name="name2">Last name</string>
    <string name="number">Mobile number</string>
    <string name="enter_number"> Enter Mobile Number </string>
    <string name="gender">Gender:</string>
    <string name="email">Email</string>
    <string name="entry"> Entries </string>
    <string name="report">Report</string>
    <string name="enter_email">Enter Email</string>
    <string name="forgot_password"> Forgot Password </string>
    <string name="login_desc">Login</string>
    <string name="list_desc">list</string>
    <string name="register_desc" />
</resources>