<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <include
        layout="@layout/actionbar"/>

    <TextView
        android:id="@+id/register_tagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_tagline"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_marginTop="90dp"/>

    <ImageView
        android:id="@id/register_img"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="190dp"
        android:layout_marginStart="170dp"
        android:src="@drawable/register"
        android:contentDescription="@string/register_desc" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_marginTop="285dp"
        android:layout_marginStart="30dp"/>

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:layout_marginTop="325dp"
        android:layout_marginStart="30dp"
        android:autofillHints="Enter name" />

    <TextView
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="#000"
        android:layout_marginTop="370dp"
        android:layout_marginStart="30dp"/>

    <EditText
        android:id="@+id/enter_number"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="number"
        android:padding="10dp"
        android:hint="@string/enter_number"
        android:layout_marginStart="30dp"
        android:layout_marginTop="410dp"
        android:autofillHints="Enter Mobile Number" />

    <Button
        android:id="@+id/register_here"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:text="@string/register"
        android:textColor="#fff"
        android:background="@drawable/boxmodel"
        android:layout_marginStart="80dp"
        android:layout_marginTop="490dp" />

</RelativeLayout>